<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdFragment">

    <Button
        android:id="@+id/btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="1dp"
        android:text="@string/Create"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_Back"
        app:layout_constraintEnd_toStartOf="@+id/btn_Back"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="81dp"
        android:text="@string/Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_create"
        app:layout_constraintTop_toBottomOf="@+id/et_product" />

    <TextView
        android:id="@+id/tv_editor_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="33dp"
        android:text="@string/Lbl_editor"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="89dp"
        android:layout_height="0dp"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="7dp"
        android:text="@string/Name"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/et_product"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_editor_list" />

    <EditText
        android:id="@+id/et_product"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="378dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/product"
        app:layout_constraintBottom_toTopOf="@+id/btn_Back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />


</androidx.constraintlayout.widget.ConstraintLayout>


